bugfix: repeatly run 'make' may encounter error because 'build' folder alrady exists.

--- a/dockin-opserver/Makefile
+++ b/dockin-opserver/Makefile
@@ -10,10 +10,10 @@ OS=linux
 ARCH=amd64
 
 default:
-	@go mod tidy
-	@go mod vendor
-	@mkdir build
-	@cd build && GOOS=${OS} GOARCH=${ARCH} go build -o ${BINARY} ../cmd
+	go mod tidy
+	go mod vendor
+	mkdir -p build
+	cd build && GOOS=${OS} GOARCH=${ARCH} go build -o ${BINARY} ../cmd
 
 
 list:
@@ -42,13 +42,13 @@ clean:
 	@if [ -f ${BINARY} ] ; then rm ${BINARY} ; fi
 
 package: default
-	@mkdir -p release/${BINARY}
-	@mkdir -p release/${BINARY}/apps
-	@mkdir -p release/${BINARY}/bin
-	@cp build/${BINARY} release/${BINARY}/apps
-	@cp scripts/* release/${BINARY}/bin
-	@cp -r configs release/${BINARY}/
-	@chmod +rx release/${BINARY}/*
-	@cd release && tar -czf "${BINARY}_${VERSION}.tar.gz" ./${BINARY}
+	mkdir -p release/${BINARY}
+	mkdir -p release/${BINARY}/apps
+	mkdir -p release/${BINARY}/bin
+	cp build/${BINARY} release/${BINARY}/apps
+	cp scripts/* release/${BINARY}/bin
+	cp -r configs release/${BINARY}/
+	chmod +rx release/${BINARY}/*
+	cd release && tar -czf "${BINARY}_${VERSION}.tar.gz" ./${BINARY}
 
 .PHONY: default package fmt fmt-check install vet clean
